--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -89,7 +89,7 @@
     </head>
 
     <body>
-        <h1>Stay Organized, Get Things Done, Aman (Jenkins), Write your plan on Learning Jenkins</h1>
+        <h1>Stay Organized, Get Things Done, Aman (Jenkins), So write your plan on Learning Jenkins</h1>
         <ul>
             <% todolist.forEach(function(todo, index) { %>
             <li>
